# depth_nerf_calibration

./: README.md  charuco_rsd435.launch  check_calibration_use_marker.launch  d435_intrinsic_larger.yaml  get_pointcoordinate.launch  hand_eye_calibration_ndi_rs.launch  pivot_calib_tip.py  rigid_transform_3D.py  rs_d435.launch  save_points_pointer_tip_np.txt
images/: README.md
src/easy_handeye/easy_handeye/launch/: calibrate.launch
src/easy_handeye/easy_handeye/src/easy_handeye/: handeye_robot.py  handeye_sampler.py
src/easy_handeye/rqt_easy_handeye/resource/: rqt_pointcoordinate.ui  rqt_pointcoordinate_info.ui
src/easy_handeye/rqt_easy_handeye/src/rqt_easy_handeye/: rqt_calibration_evaluator.py  rqt_calibrationmovements.py
src/easy_handeye_demo/launch/: iiwa_stack_config.rviz
src/ndi_handeyecalibration/: CMakeLists.txt  package.xml
src/ndi_handeyecalibration/launch/: calibrate.launch  publish.launch
src/ndi_polaris/: 75-usb-serial.rules  CMakeLists.txt  install_ubuntu_deps.sh  package.xml  setup.py
src/ndi_polaris/include/ndi_polaris/: NDIComm.hpp  SerialComm.hpp  SerialDevice.hpp  TrackerFrame.hpp  TrackerTarget.hpp  blas.hpp  convert.hpp  convert_string.hpp
src/ndi_polaris/launch/: demo.launch  example_config.rviz  start.launch
src/ndi_polaris/scripts/: ndi_publisher.py
src/ndi_polaris/src/: NDIComm.cpp  SerialComm.cpp  SerialComm_original.cpp  SerialDevice.cpp  TrackerFrame.cpp  TrackerTarget.cpp  tracking_probe.i
src/ndi_polaris/tools/: cross.rom  cross_bent.rom  gamma_calibrator.rom  pointer_tip.rom  triangle_rect.rom  triangle_scalene.rom
src/roboticvisiondataset/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
src/roboticvisiondataset/calibration/: d435.yaml
src/roboticvisiondataset/launch/: aruco.launch  camera_calibration.launch  capture_rs.launch  charuco.launch  charuco_d435.launch  charuco_left.launch  check_calibration.launch  checkerboard.launch  custom_rosconsole.conf  hand_eye_cali.rviz  hand_eye_calibration.launch  hand_eye_calibration_charuco.launch  hand_eye_simulation_marker.launch  rs_d435.launch
src/roboticvisiondataset/models/marker_checkerboard_7x8_30mm/: marker_checkerboard_7x8_30mm.sdf  model.config
src/roboticvisiondataset/models/marker_checkerboard_7x8_30mm/material/scripts/: marker_checkerboard_7x8_30mm.material
src/roboticvisiondataset/scripts/: capture.py  capture_rs.py  gen_pattern.py  get_point_coordinate.py  handeye_calibration.py  test.py
src/roboticvisiondataset/src/point_coordinate/: __init__.py  point_coordinate_gui.py
src/roboticvisiondataset/src/rqt_handeye_calibration/: __init__.py  new_rqt_handeye_calibration.py
src/roboticvisiondataset/synchronization/: main.py
src/roboticvisiondataset/worlds/: camera_marker.world
